--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,6 @@ body{
     grid-template-columns: 1fr 4fr;
 }
 
-.sidebar{
-    height: 100vh;
-    display: grid;
-    grid-template-rows: 1fr 5fr 3fr;
-    grid-column: 1/2;
-    background-color: aqua;
-}
-
 .header{
     display: grid;
     grid-column:2/3;
@@ -24,14 +16,28 @@ body{
     background-color: blueviolet;
 }
 
+.sidebar{
+    display: grid;
+    grid-column: 1/2;
+    grid-row: 1/4;
+    background-color: aqua;
+}
+
+.project-heading{
+    margin:30px
+}
+
 .projects{
     display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fit,minmax(270px,1fr));
     grid-column: 2/3;
+    margin: 2px;
+    margin: 30px;
 }
 
 .projects .card{
-    width: 300px;
     height: 150px;
     border: 2px solid black;
-    padding: 30px;
+    padding: 10px
 }
