--- a/styles.css
+++ b/styles.css
@@ -36,15 +36,20 @@ body{
 
 .projects{
     display: grid;
-    gap: 10px;
+    gap: 20px;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
     grid-row: 3/4;
-    margin: 2px;
-    margin: 10px;
+    margin: 50px;
 }
 
 .projects .card{
     height: 150px;
     border: 2px solid black;
     padding: 10px
+}
+
+.footer{
+    grid-column: 1/3;
+    height: 100px;
+    background-color: black;
 }
