--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,13 @@ body{
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 250px 4fr 1fr;
     grid-template-rows: 150px 1fr 4fr 1fr
 }
 
 .header{
     display: grid;
+    grid-template-rows: 1fr 5fr 1fr;
     grid-column:2/3;
     grid-row:1/2;
     background-color: blueviolet;
@@ -27,12 +28,48 @@ body{
     margin:10px;
 }
 
+/*Sidebar*/
 .sidebar{
     display: grid;
+    grid-template-rows: 100px 300px 300px;
     grid-column: 1/2;
     grid-row: 1/5;
     background-color: aqua;
 }
+
+.profile .links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 30px;
+}
+
+.links li,
+.profile li{
+    display: flex;
+    align-items: center;
+    list-style-type: none;
+    cursor: pointer;
+    text-decoration: none;
+    margin: 30px;
+}
+
+.profile{
+    margin:37px
+}
+
+.material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24;
+    margin: 10px;
+    
+  }
+
+
 
 .projects{
     display: grid;
