--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body{
     grid-template-rows: 1fr 5fr 1fr;
     grid-column:2/3;
     grid-row:1/2;
-    background-color: blueviolet;
+    background-color:rgb(31, 110, 140);
 }
 
 .nav{
@@ -34,7 +34,9 @@ body{
     grid-template-rows: 100px 300px 300px;
     grid-column: 1/2;
     grid-row: 1/5;
-    background-color: aqua;
+    background-color: rgb(46, 138, 153);
+    color: aliceblue;
+    font-size: 25px;
 }
 
 .profile .links {
@@ -43,6 +45,7 @@ body{
     align-items: center;
     text-align: center;
     margin: 30px;
+    
 }
 
 .links li,
@@ -52,11 +55,13 @@ body{
     list-style-type: none;
     cursor: pointer;
     text-decoration: none;
-    margin: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .profile{
-    margin:37px
+    margin-bottom:37px;
+    margin-left: 37px;
 }
 
 .material-symbols-outlined {
