Add styling and positioned the profile picture

--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,41 @@ body{
     min-height:30px; 
     min-width: 80px;
     align-items: center;
-    justify-content: center;
-    
-    
-        
+    justify-content: center;      
+}
+
+/* .profile-picture {
+    position:relative;
+    overflow: hidden;
+    border-radius: 50%;
+    right:10px;
+    height: 60px;
+    width: 60px;
+}
+
+.profile-picture img {
+    position:absolute;
+    width: 100px;
+    height: 100px;
+    top: 90%;
+    right:-13px;
+    transform:translateY(-50%);
+} */
+
+.profile-picture{
+    position: relative;
+    left: 1000px;
+    top: 20px;
+    align-items: center;
+}
+
+.profile-picture img{
+  width: 80px;
+  height:80px;
+  border-radius: 50%;
+
+  object-fit: cover;
+  object-position: center right;
 }
 
 .nav{
