--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,17 @@ body{
     display: grid;
     grid-template-columns: 250px 4fr 1fr;
     grid-template-rows: 120px 100px 4fr 1fr;
-    background-color: rgb(14, 41, 84);
+    background-color: rgb(132, 167, 161);
 }
 
 .header{
     display: flex;
+    align-items: center;
     grid-column:2/4;
     grid-row:1/2;
     background-color:rgb(31, 110, 140);
+    margin: 20px;
+    border-radius: 10px;
     
 }
 
@@ -24,13 +27,10 @@ body{
     background-color: black;
     color: white;
     cursor: pointer;
-    justify-content: space-between;
-    margin: 40px;
+    margin: 20px;
     border:none; 
     border-radius:10px; 
-    padding:10px;
-    min-height:30px; 
-    min-width: 80px;
+    padding:15px;
     align-items: center;
     justify-content: center;      
 }
@@ -55,14 +55,14 @@ body{
 
 .profile-picture{
     position: relative;
-    left: 1000px;
-    top: 20px;
+    left: 1150px;
+    top: 3px;
     align-items: center;
 }
 
 .profile-picture img{
-  width: 80px;
-  height:80px;
+  width: 60px;
+  height:60px;
   border-radius: 50%;
   object-fit: cover;
   object-position: center right;
@@ -70,6 +70,7 @@ body{
 
 .nav{
     display: flex;
+    gap: 8px;
     align-items: center;
     grid-row:2/3;
     grid-column:2/4;
@@ -143,8 +144,9 @@ body{
 
 .projects .card{
     height: 150px;
-    border: 2px solid black;
-    padding: 10px
+    border: 1px solid black;
+    padding: 10px;
+    border-radius:20%
 }
 
 .announcements{
