--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body{
     align-items: center;
     grid-column:2/4;
     grid-row:1/2;
-    background-color:rgb(31, 110, 140);
+    background-color:#1768AC;
     margin: 20px;
     border-radius: 10px;
     
@@ -25,16 +25,16 @@ body{
 
 .button-34{
     display: flex;
-    background-color: black;
-    color: white;
+    color: black;
     cursor: pointer;
     margin: 20px;
-    border:none; 
     border-radius:10px; 
     padding:15px;
     align-items: center;
     justify-content: center; 
     font-family: 'Raleway', sans-serif;    
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .profile-picture{
@@ -57,8 +57,8 @@ body{
     align-items: center;
     grid-row:2/3;
     grid-column:2/4;
-    background-color: rgb(58, 61, 61);
-    color: azure;
+    background-color:#06BEE1;
+    color:white;
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
 }
@@ -78,7 +78,7 @@ body{
     grid-template-rows: 100px 300px 300px;
     grid-column: 1/2;
     grid-row: 1/5;
-    background-color: rgb(41, 43, 43);
+    background-color:#03256C;
     color: aliceblue;
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
@@ -135,7 +135,7 @@ body{
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-radius:5px;
     font-family: 'Roboto', sans-serif;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .announcements{
@@ -144,7 +144,7 @@ body{
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-radius:5px;
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
 }
    
 
